--- a/example/config.ini
+++ b/example/config.ini
@@ -2,3 +2,5 @@ lemur_path = "../lemur"
 
 project_autoload_paths[] = "handlers" 
 project_autoload_paths[] = "models" 
+
+project_cache_path = "cache"
