Edited examples/basic/config.ini via GitHub

--- a/examples/basic/config.ini
+++ b/examples/basic/config.ini
@@ -1,4 +1,4 @@
-asadoo_path = "../../asadoo"
+asadoo_path = "../../src"
 
 project_autoload_paths[] = "handlers" 
 project_autoload_paths[] = "models" 
