--- a/examples/basic/.htaccess
+++ b/examples/basic/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine on
 # Capturamos todos los requests, incluyendo css, js y assets
 RewriteCond $1 (.+)
-RewriteRule (.*) index.php?__req=$1 [QSA]
+RewriteRule (.*) index.php [QSA]
+
+#?__req=$1 [QSA]
